# align

./: Makefile.am  configure.ac
include/: align.h
src/: Makefile.am  align.c  bitstream.c  bitstream.h  main.c
test/: Makefile.am  main.c
